--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ArticleDetailsActivity"></activity>
+        <activity android:name=".OrderDetails"></activity>
+        <activity android:name=".ArticleDetailsActivity" />
         <activity android:name=".MenCategoryActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".MainActivity">
