--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,22 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha01'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.github.smarteist:autoimageslider:1.3.9-appcompat'
+    implementation "androidx.room:room-runtime:2.2.5"
+    annotationProcessor "androidx.room:room-compiler:2.2.5"
+    // For Kotlin use kapt instead of annotationProcessor
 
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:2.2.5"
+    implementation 'com.nex3z:notification-badge:1.0.4'
+    // optional - RxJava support for Room
+    implementation "androidx.room:room-rxjava2:2.2.5"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime:2.0.0'
+    // optional - Guava support for Room, including Optional and ListenableFuture
+    implementation "androidx.room:room-guava:2.2.5"
+    testImplementation "androidx.room:room-testing:2.2.5"
     implementation 'com.google.android.material:material:1.3.0-alpha02'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.code.gson:gson:2.8.6'
