--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.dyhdyh.support:glide:1.0.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
 }
