--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Cart"></activity>
+        <activity android:name=".Checkout"></activity>
+        <activity android:name=".Cart" />
         <activity android:name=".OrderDetails" />
         <activity android:name=".ArticleDetailsActivity" />
         <activity android:name=".MenCategoryActivity" />
